Changed some text and did minor spacing fixes

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ ul {
     display: flex;
     margin: 0;
     padding: 0;
-    gap: 16px;
+    gap: 32px;
     list-style-type: none;
 }
 
@@ -136,6 +136,8 @@ img {
 }
 
 .info-title {
+    padding: 0 16px;
+    min-width: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -158,11 +160,12 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 8px;
 }
 
 .card-image {
     border: 2px solid #3882F6;
-    border-radius: 25%;
+    border-radius: 20px;
     width: 150px;
     height: 150px;
 }
